--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
 
 <script>
     const firebaseConfig = {
-        apiKey: "AIzaSyDpdIb1KL0z8ha5dEsKopwbSokE7jCxt68", 
-        authDomain: "websirentest.firebaseapp.com",
-        databaseURL: "https://websirentest-default-rtdb.firebaseio.com",
-        projectId: "websirentest",
-        storageBucket: "websirentest.appspot.com",
-        appId: "1:223793739773:web:651543788764020a324911"
-    };
+  apiKey: "AIzaSyCuleCw9MnBXNgRiXCarzJYv9GIbSQGH0Q",
+  authDomain: "websirentest-73c76.firebaseapp.com",
+databaseURL:"https://websirentest-73c76-default-rtdb.firebaseio.com"
+  projectId: "websirentest-73c76",
+  storageBucket: "websirentest-73c76.firebasestorage.app",
+  messagingSenderId: "44754627165",
+  appId: "1:44754627165:web:809ba10f97f136b9b43bb4"
+};
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
