--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     const firebaseConfig = {
   apiKey: "AIzaSyCuleCw9MnBXNgRiXCarzJYv9GIbSQGH0Q",
   authDomain: "websirentest-73c76.firebaseapp.com",
-databaseURL:"https://websirentest-73c76-default-rtdb.firebaseio.com"
+databaseURL:"https://websirentest-73c76-default-rtdb.firebaseio.com",
   projectId: "websirentest-73c76",
   storageBucket: "websirentest-73c76.firebasestorage.app",
   messagingSenderId: "44754627165",
